--- a/WIP/My Project/Resources.resx
+++ b/WIP/My Project/Resources.resx
@@ -124,6 +124,9 @@
   <data name="icons8_globe_earth_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-globe-earth-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8_math_50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-math-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8_regular_document_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-regular-document-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
